IVYPORTAL-16888 Dashboard Configuration button align not correctly: update css of dashboard button group

--- a/AxonIvyPortal/portal/webContent/resources/css/dashboard.css
+++ b/AxonIvyPortal/portal/webContent/resources/css/dashboard.css
@@ -135,6 +135,7 @@
 .dashboard-header__action {
   padding-right: 0;
   padding-top: 0;
+  white-space : nowrap;
 }
 
 .dashboard__body {
